--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # Runs every 5 minutes
     - cron: '*/5 * * * *'  # This will trigger every 5 minutes
+  workflow_dispatch:  # Manually trigger the workflow from the UI
 
 jobs:
   keep_awake:
