--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -2,24 +2,15 @@ name: Keep Render App Awake
 
 on:
   schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'  # This will trigger every 5 minutes
-  workflow_dispatch:  # Manually trigger the workflow from the UI
+    - cron: '*/5 * * * *'  # Every 5 minutes
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   keep_awake:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check if it's the 14-minute interval
+      - name: Send request to Render URL
         run: |
-          # Get the current minute of the hour
-          current_minute=$(date +%M)
-
-          # Only run the curl request when it's a multiple of 14 (i.e., 0, 14, 28, 42, 56)
-          if [[ "$current_minute" == "00" || "$current_minute" == "14" || "$current_minute" == "28" || "$current_minute" == "42" || "$current_minute" == "56" ]]; then
-            echo "Sending request to Render URL..."
-            curl -X GET "https://searxng-json.onrender.com/search?q=test&format=json"
-          else
-            echo "Not the correct time to hit the URL. Skipping."
-          fi
+          echo "Pinging Render app to keep awake..."
+          curl -X GET "https://searxng-json.onrender.com/search?q=test&format=json"
